--- a/assets/index.html
+++ b/assets/index.html
@@ -1,4 +1,3 @@
-<!-- Напишите решение сюда -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello worlddddd</p>
+    <p>Hello world</p>
 </body>
 </html>
